--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 11:05:05 2018</p>
+         Last Run: Mon Oct 29 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>Clear</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>0</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>36</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>Clear</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>1</td>
                         <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>32</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>31</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "1",
                  "0",
+                 "-1",
                  "-1"
                ]
              },
@@ -101,8 +101,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "4",
                  "3",
+                 "2",
                  "2"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
+                 "49",
                  "52",
-                 "53"
+                 "54"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "32",
-                 "31"
+                 "15",
+                 "15",
+                 "18"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 11:05:05 2018</p>
+         Last Run: Mon Oct 29 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 11:05:05 2018</p>
+         Last Run: Mon Oct 29 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,38 +460,38 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
-                        <td>4</td>
+                        <td>Mostly Cloudy</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>12</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>7</td>
-                        <td>59</td>
-                        <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SW</td>
-                        <td>80</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>6</td>
-                        <td>58</td>
+                        <td>8</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>WSW</td>
-                        <td>85</td>
+                        <td>W</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>9</td>
-                        <td>57</td>
+                        <td>6</td>
+                        <td>4</td>
+                        <td>4</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>88</td>
                      </tr>
                   </tbody>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "1",
                  "2",
-                 "2"
+                 "2",
+                 "4"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "4",
                  "5",
-                 "5"
+                 "5",
+                 "6"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "6",
-                 "9"
+                 "12",
+                 "8",
+                 "4"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "58",
-                 "57"
+                 "56",
+                 "55",
+                 "54"
                ]
              },
              {
@@ -612,8 +612,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "85",
+                 "77",
+                 "84",
                  "88"
                ]
              }
