--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 13:05:03 2018</p>
+         Last Run: Mon Oct 29 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -46,7 +46,7 @@
                         <td>3</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>19</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "53",
-                 "55"
+                 "50",
+                 "54",
+                 "56"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "15",
                  "16",
-                 "16",
-                 "19"
+                 "20"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 13:05:03 2018</p>
+         Last Run: Mon Oct 29 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -249,23 +249,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>14</td>
-                        <td>86</td>
+                        <td>85</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>58</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>13</td>
-                        <td>73</td>
+                        <td>12</td>
+                        <td>74</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>69</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>5</td>
-                        <td>62</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>77</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "14",
-                 "13",
+                 "12",
                  "5"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
-                 "73",
-                 "62"
+                 "85",
+                 "74",
+                 "63"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "69",
-                 "77"
+                 "56",
+                 "67",
+                 "75"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 13:05:03 2018</p>
+         Last Run: Mon Oct 29 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -467,14 +467,14 @@
                         <td>59</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>79</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>6</td>
+                        <td>3</td>
                         <td>11</td>
                         <td>58</td>
                         <td>1</td>
@@ -488,11 +488,11 @@
                         <td>6</td>
                         <td>3</td>
                         <td>8</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "2",
-                 "2",
+                 "3",
                  "3"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "5",
-                 "5",
+                 "6",
                  "6"
                ]
              }
@@ -603,7 +603,7 @@
                "data":[
                  "59",
                  "58",
-                 "57"
+                 "58"
                ]
              },
              {
@@ -614,7 +614,7 @@
                "data":[
                  "79",
                  "87",
-                 "91"
+                 "92"
                ]
              }
            ]
