--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 14:05:03 2018</p>
+         Last Run: Mon Oct 29 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 14:05:03 2018</p>
+         Last Run: Mon Oct 29 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Overcast</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>14</td>
+                        <td>12</td>
                         <td>85</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>56</td>
+                        <td>WNW</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-1</td>
-                        <td>12</td>
-                        <td>74</td>
+                        <td>Overcast</td>
                         <td>1</td>
+                        <td>-2</td>
+                        <td>11</td>
+                        <td>77</td>
+                        <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>67</td>
+                        <td>W</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>3</td>
-                        <td>0</td>
-                        <td>5</td>
-                        <td>63</td>
+                        <td>Overcast</td>
+                        <td>2</td>
+                        <td>-1</td>
+                        <td>4</td>
+                        <td>71</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>SW</td>
-                        <td>75</td>
+                        <td>WSW</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,8 +305,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-1",
-                 "0"
+                 "-2",
+                 "-1"
                ]
              },
              {
@@ -317,8 +317,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "2",
-                 "3"
+                 "1",
+                 "2"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "14",
                  "12",
-                 "5"
+                 "11",
+                 "4"
                ]
              },
              {
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "85",
-                 "74",
-                 "63"
+                 "77",
+                 "71"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "67",
-                 "75"
+                 "81",
+                 "84",
+                 "86"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 14:05:03 2018</p>
+         Last Run: Mon Oct 29 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
