--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 15:05:03 2018</p>
+         Last Run: Mon Oct 29 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "54",
-                 "56"
+                 "49",
+                 "53",
+                 "55"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
                  "16",
-                 "20"
+                 "17",
+                 "19"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 15:05:03 2018</p>
+         Last Run: Mon Oct 29 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>12</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
+                 "84",
                  "77",
                  "71"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 15:05:03 2018</p>
+         Last Run: Mon Oct 29 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>13</td>
-                        <td>59</td>
+                        <td>24</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>WNW</td>
-                        <td>79</td>
+                        <td>NW</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>6</td>
-                        <td>3</td>
-                        <td>11</td>
-                        <td>58</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>24</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>NW</td>
-                        <td>87</td>
+                        <td>NNW</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>6</td>
-                        <td>3</td>
-                        <td>8</td>
-                        <td>58</td>
-                        <td>0</td>
-                        <td>13</td>
+                        <td>4</td>
+                        <td>24</td>
+                        <td>59</td>
+                        <td>1</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>92</td>
+                        <td>85</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,8 +520,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "2",
-                 "3",
-                 "3"
+                 "2",
+                 "4"
                ]
              },
              {
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "5",
-                 "6",
+                 "5",
                  "6"
                ]
              }
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "11",
-                 "8"
+                 "24",
+                 "24",
+                 "24"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "58",
-                 "58"
+                 "61",
+                 "60",
+                 "59"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "87",
-                 "92"
+                 "81",
+                 "86",
+                 "85"
                ]
              }
            ]
